2009-04-03  Ken Werner  <ken.werner@de.ibm.com>

	* libc/machine/spu/spu-gmon.c: Tweaks to support simultaneous SPU
	profiling.

2009-04-03  Ken Werner  <ken.werner@de.ibm.com>

	* libc/include/math.h: Remove duplicate copysign prototype.
	Fix __math_68881 define typo.  Guard functions of the rint family.

2009-04-03  Craig Howland <howland@LGSInnovations.com>

	* libm/common/s_llrint.c: New file, implementing llrint().
	* libm/common/sf_llrint.c: New file, implementing llrintf().
	* libm/common/Makefile.am:  Add s_llrint.c (src); sf_llrint.c (fsrc).
	* libm/common/Makefile.in:  Regenerate.

2009-04-02  Corinna Vinschen  <corinna@vinschen.de>

	* libc/ctype/ctype_c.c: Move inclusion of ctype_iso.h and
	ctype_cp.h out of ALLOW_NEGATIVE_CTYPE_INDEX case.
	(__ctype_ptr__): Constify in !_MB_CAPABLE case.  Otherwise,
	de-constify in !ALLOW_NEGATIVE_CTYPE_INDEX case, too.  Add comment.
	(__set_ctype): Set __ctype_ptr__ pointer according to definition
	of ALLOW_NEGATIVE_CTYPE_INDEX.
	* libc/include/ctype.h (__ctype_ptr__): Constify in !_MB_CAPABLE case.

2009-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* libc/ctype/Makefile.am: Remove _tolower.c and _toupper.c
	source files.  Add a dependency rule for ctype_o to note
	changes in ctype_iso.h and ctype_cp.h.
	* libc/ctype/Makefile.in: Regenerate.
	* libc/ctype/_tolower.c: Remove file.
	* libc/ctype/_toupper.c: Remove file.
	* libc/ctype/ctype_.c: Make sure ALLOW_NEGATIVE_CTYPE_INDEX
	is always defined on Cygwin.
	(_ctype_b): Don't make `static const' on Cygwin.
	(ctype_iso.h): Include if _MB_EXTENDED_CHARSETS_ISO is set.
	(ctype_cp.h): Include if _MB_EXTENDED_CHARSETS_WINDOWS is set.
	(__ctype_ptr): Drop definition.
	(__ctype_ptr__): De-constify.  Mark as __EXPORT symbol.
	(_ctype_): Add Cygwin-specifc asm define.
	(__set_ctype): New function to set __ctype_ptr__ according to
	current charset.
	* libc/ctype/ctype_cp.h: New file containing Windows codepage
	specific character class tables.